# LinupWIN

./: .gitignore  main.py  pyproject.toml  run.bat  setup.bat  setup.sh
.github/workflows/: build-windows.yml
