[project]
name = "Linup"
version = "12.0.0"
description = "Linup Roulette Tracker"
requires-python = ">=3.10"
dependencies = ["flet>=0.25.0"]

[tool.flet]
org = "com.linup"
product = "Linup"
company = "Linup"
icon = "icon.png"
bundle_id = "com.linup.app"

[tool.flet.windows]
file_version = "12.0.0.0"
product_version = "12.0.0.0"
