[project]
name = "Linup"
version = "18.1.8"
description = "Linup Roulette Tracker"
requires-python = ">=3.10"
dependencies = ["flet==0.80.5", "reportlab>=4.0.0"]

[tool.flet]
org = "com.linup"
product = "Linup"
company = "Linup"
icon = "icon.png"
bundle_id = "com.linup.app"

[tool.flet.macos]
minimum_version = "12.0"
